<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mode_info_text" />
  </ScrollView>
  <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
    <CheckBox android:text="@string/mode_info_cb" android:id="@+id/mode_info_cb" android:layout_width="wrap_content" android:layout_height="wrap_content"></CheckBox>
    <Button android:id="@+id/bt_mode_info_ok" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ok" />
  
</LinearLayout>
</LinearLayout>
