<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/table_scrollView" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
<!-- 
<Button android:text="@string/table_back" android:id="@+id/table_activity_back" android:layout_height="wrap_content" android:layout_width="fill_parent" />
<Spinner android:id="@+id/table_activity_spinner" android:layout_height="wrap_content" android:layout_width="fill_parent" />
 -->
<TextView android:text="@string/table_title" android:gravity="center" android:layout_width="fill_parent" android:textSize="40dip" android:textColor="#ffffff" android:id="@+id/textView2" android:layout_height="wrap_content"></TextView>
<TableLayout android:padding="10dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
<TextView android:text="@string/table_startV"/>
<EditText android:text="0" android:padding="10dip" android:id="@+id/table_activity_edStart" android:layout_weight="1" />
</TableRow>
<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
<TextView android:text="@string/table_endV"/>
<EditText android:text="10" android:padding="10dip" android:id="@+id/table_activity_edEnd" android:layout_weight="1" />
</TableRow>
<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
<TextView android:text="@string/table_interval"/>
<EditText android:text="1" android:padding="10dip" android:id="@+id/table_activity_edInterval" android:layout_weight="1" />
</TableRow>
<!-- 
<CheckBox android:text="@string/table_showPoints" android:id="@+id/cbShowPoints" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true"></CheckBox>
 -->
<TextView android:text="@string/table_choose" android:id="@+id/textView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="#aaaaaa" android:textColor="#000000" android:gravity="center"></TextView>
<LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/table_llCb" android:orientation="vertical" android:background="#333333"></LinearLayout>
</TableLayout>
<Button android:text="@string/table_button" android:id="@+id/table_activity_button" android:layout_height="wrap_content" android:layout_width="fill_parent" />
<!-- 
<TextView android:padding="10dip" android:gravity="center" android:text="" android:id="@+id/table_activity_tvFunction" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="24dip" />
 -->
<TableLayout android:id="@+id/table_activity_table" android:layout_height="wrap_content" android:layout_width="match_parent">
</TableLayout>
</LinearLayout>
</ScrollView>
