<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res/de.georgwiese.integralcalculator"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="0dp">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:padding="0dp"
		 android:layout_weight="1">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:padding="0dp">
			
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:padding="10dp">

				<TextView android:text="@string/ic_function"
					android:id="@+id/TextView01" android:layout_width="fill_parent"
					android:layout_height="wrap_content"></TextView>
				<LinearLayout android:gravity="center_vertical"
					android:orientation="horizontal" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<EditText android:text="" android:id="@+id/EdFkt"
						android:layout_width="wrap_content" android:layout_weight="1"
						android:layout_height="wrap_content"></EditText>
					<View android:layout_width="3dp" android:layout_height="wrap_content" />
				</LinearLayout>

				<TableLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<TableRow>
						<TextView
							android:layout_weight="1" android:text="@string/ic_left_border"
							android:id="@+id/TextView02" android:layout_width="fill_parent"
							android:layout_height="wrap_content"></TextView>
						<TextView
							android:layout_weight="1" android:text="@string/ic_right_border"
							android:id="@+id/TextView03" android:layout_width="fill_parent"
							android:layout_height="wrap_content"></TextView>
					</TableRow>
					<TableRow>
						<EditText android:paddingRight="2dp" android:text=""
							android:layout_weight="1" android:id="@+id/EdLeft"
							android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
						<EditText android:paddingLeft="2dp" android:text=""
							android:layout_weight="1" android:id="@+id/EdRight"
							android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
					</TableRow>
				</TableLayout>

				<TextView android:layout_weight="1"
					android:text="@string/ic_accuracy" android:id="@+id/TextView04"
					android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
				<SeekBar android:id="@+id/SbAcuracy" android:progress="50" android:layout_height="wrap_content" android:layout_width="match_parent"></SeekBar>
				<LinearLayout android:layout_width="fill_parent" android:padding="0dip"
					android:layout_height="wrap_content" android:orientation="horizontal">
					<Button android:text="@string/ic_calculate_int"
						android:layout_weight="1" android:id="@+id/BtCalc_int"
						android:layout_width="0dp" android:layout_height="wrap_content"></Button>
					<Button android:text="@string/ic_calculate_area"
						android:layout_weight="1" android:id="@+id/BtCalc_area"
						android:layout_width="0dp" android:layout_height="wrap_content"></Button>
				</LinearLayout>
				


			</LinearLayout>

		</LinearLayout>

	</ScrollView>
<View android:layout_width="fill_parent" android:layout_height="0px"/>

</LinearLayout>