<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="0dp"
  android:gravity="center_horizontal">
    <Button android:drawableTop="@drawable/bt_mode_pan" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:text="@string/mode_pan_name" android:id="@+id/mv_mode_pan" android:textSize="12dip"></Button>
    <Button android:drawableTop="@drawable/bt_mode_trace" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:text="@string/mode_trace_name" android:id="@+id/mv_mode_trace" android:textSize="12dip"></Button>
    <Button android:drawableTop="@drawable/bt_mode_slope" android:layout_height="wrap_content" android:layout_width="fill_parent" android:gravity="center" android:text="@string/mode_slope_name" android:id="@+id/mv_mode_slope" android:textSize="12dip"></Button>
<!--     <ImageButton android:src="@drawable/bt_mode_pan" android:layout_height="wrap_content" android:id="@+id/mv_mode_pan" android:layout_width="wrap_content"></ImageButton>
    <TextView android:text="Pan" android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <View android:layout_width="wrap_content" android:layout_height="2dp"></View>
    <ImageButton android:src="@drawable/bt_mode_trace" android:layout_height="wrap_content" android:id="@+id/mv_mode_trace" android:layout_width="wrap_content"></ImageButton>
    <TextView android:text="Trace" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
    <View android:layout_width="wrap_content" android:layout_height="2dp"></View>
    <ImageButton android:src="@drawable/bt_mode_slope" android:layout_height="wrap_content" android:id="@+id/mv_mode_slope" android:layout_width="wrap_content"></ImageButton>
    <TextView android:text="Slope" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
 -->
</LinearLayout>
